--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,8 +18,9 @@ jobs:
       with:
         go-version: 1.17
 
-    - name: Build
-      run: go build -v 2-2/...
+    - name: go mod 
+      run: go mod tidy
 
-    - name: Test
-      run: go test -v 2-2/...
+    - name: Build
+      run: go build -v ./...
+
