--- a/.github/workflows/goBuild.yml
+++ b/.github/workflows/goBuild.yml
@@ -20,7 +20,10 @@ jobs:
 
     - name: go mod 
       run: go mod tidy
-
+    
+    - name: Test dir
+      run: pwd && ls
+      
     - name: Build
       run: go build -v ./...
 
