--- a/.github/workflows/httpServerGoBuild.yml
+++ b/.github/workflows/httpServerGoBuild.yml
@@ -2,9 +2,10 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:    
+      - main
+      # Push events to branches matching refs/heads/mona/octocat
+      - 'cncmapTask/2-2/'
 
 jobs:
 
