--- a/.github/workflows/httpServerGoBuild.yml
+++ b/.github/workflows/httpServerGoBuild.yml
@@ -25,13 +25,11 @@ jobs:
     - name: Build
       run: cd 2-2/ && go build  
 
-    - name: commit
+    - name: build Docker Image
       run: |
-        git config --global user.email zflmiy@qq.com
-        git config --global user.name FLM210
-        git add .
-        git commit -m "update" -a
+        docker login --username=${{ secrets.dockerUserName }} registry.cn-hangzhou.aliyuncs.com --password=${{ secrets.dockerPassword }} 
+        cd 2-2/ && docker build -t httpServer:latest . #执行构建
+        docker tag httpServer registry.cn-hangzhou.aliyuncs.com/my_docker_images/httpServer
+        docker push registry.cn-hangzhou.aliyuncs.com/my_docker_images/httpServer 
 
-    - name: Push changes
-      uses: ad-m/github-push-action@master
 
