--- a/.github/workflows/httpServerGoBuild.yml
+++ b/.github/workflows/httpServerGoBuild.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: build Docker Image
       run: |
-        docker login --username=${{ secrets.dockerUserName }} registry.cn-hangzhou.aliyuncs.com --password=${{ secrets.dockerPassword }} 
+        docker login --username=${{ secrets.DOCKERUSERNAME }} registry.cn-hangzhou.aliyuncs.com --password=${{ secrets.DOCKERPASSWORD }} 
         cd 2-2/ && docker build -t httpServer:latest . #执行构建
         docker tag httpServer registry.cn-hangzhou.aliyuncs.com/my_docker_images/httpServer
         docker push registry.cn-hangzhou.aliyuncs.com/my_docker_images/httpServer 
