--- a/DockerfileMultiSegmentBuild
+++ b/DockerfileMultiSegmentBuild
@@ -7,7 +7,7 @@ ENV GOOS=LINUX \
     GOARCH=amd64
 WORKDIR /gobuild
 COPY . /gobuild/
-RUN go mod init && go mod tudy && go build -o httpserver .
+RUN  go mod tidy && go build -o httpserver .
 
 
 FROM scratch
