--- a/module12/appDeploy.yaml
+++ b/module12/appDeploy.yaml
@@ -47,3 +47,40 @@ spec:
       targetPort: 80
   selector:
     app: gohttpserver
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: fmeng
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: fmeng
+  template:
+    metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "80"
+      labels:
+        app: fmeng
+    spec:
+      containers:
+        - name: httpserver
+          imagePullPolicy: IfNotPresent
+          image: cncamp/httpserver:v1.0-metrics
+          ports:
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: fmeng
+spec:
+  ports:
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 80
+  selector:
+    app: fmeng
