--- a/module12/istio-ingress.yaml
+++ b/module12/istio-ingress.yaml
@@ -2,19 +2,28 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: gohttpserver
+  namespace: demo-istio
 spec:
   gateways:
-    - gohttpserver
+  - gohttpserver
   hosts:
-    - gohttpserver.cncamp.io
+  - gohttpserver.cncamp.io
   http:
-    - match:
-        - port: 443
-      route:
-        - destination:
-            host: gohttpserver.demo-istio.svc.cluster.local
-            port:
-              number: 80
+  - match:
+    - uri:
+        prefix: /fmeng
+    rewrite:
+      uri: /healthz
+    route:
+    - destination:
+        host: fmeng.demo-istio.svc.cluster.local
+        port:
+          number: 80
+  - route:
+    - destination:
+        host: gohttpserver.demo-istio.svc.cluster.local
+        port:
+          number: 80
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
